--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-photo-editor": "^0.3.8",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.3.1",
     "tslib": "^2.3.0",
